fixtures/frontend/milestone-2/invalid/gate-predicate-not-bool/main.aivi
type User = { email: Text }

value seed:User = { email: "ada@example.com" }

value maybeUser =
    seed
     ?|> .email
